<resources>
    <string name="app_name">hellocare_project</string>
    <string name="title_name">헬로케어</string>
    <string name="name">이름</string>
    <string name="sign_birth">생년월일</string>
    <string name="sign_id">아이디</string>
    <string name="sign_pw">비밀번호</string>
    <string name="sign_pwcheck">비밀번호 확인</string>

    <string name="sign_type">유형</string>
    <string name="sign_gender">성별</string>
    <string name="signin">회원가입</string>

    <string name="find_id_name">아이디 찾기</string>
    <string name="find_pw_name">비밀번호 찾기</string>
    <string name="enter_name">로그인</string>

    <string name="license">면허증</string>
    <string name="license_ex">면허증을 첨부해주세요</string>
    <string name="hospital">병원명</string>
    <string name="hosptial_ex">병원명을 입력해주세요</string>
    <string name="address">주소</string>
    <string name="location">지역명</string>
    <string name="add_detail">상세주소 입력</string>
    <string name="doctor_info">의사정보</string>
    <string name="academic_record">학력</string>
    <string name="doc_major">진료과목</string>
    <string name="greeting">인사말</string>
    <string name="doc_time">진료시간</string>
    <string name="doc_time_detail">진료시간을 선택해주세요</string>

    <string name="pharmacy">약국명</string>
    <string name="phar_ex">약국명을 입력해주세요</string>
    <string name="phar_info">약사정보</string>
    <string name="phar_time">영업시간</string>
    <string name="phar_time_detail">영업시간을 선택해주세요</string>

    <string name="argree_ex_text">
    고객님께서는 동의를 거부할 수 있습니다.\n
    단, 필수항목 동의 거부 시에는 회원가입이 제한됩니다.\n\n
    약관동의 후 본인인증을 진행해야 회원가입이 가능합니다.
    </string>
    <string name="agree_one_text">
        제 1 조 (목적)\n
        본 약관은 헬로케어(이하 "회사")가 제공하는 모든 서비스(이하 "서비스") 이용과 관련하여 회사와 이용자(이하 "회원"이라 함)간에 권리, 의무 및 책임사항, 기타 필요한 사항을 규정함을 목적으로 합니다.\n

        \n제 2 조 (정의)\n
        이 약관에서 사용하는 용어의 정의는 다음과 같습니다.\n
        1. "서비스"라 함은 구현되는 단말기(PC, TV, 휴대형단말기 등의 각종 유무선 장치를 포함)와 상관없이 "회원"이 이용할 수 있는 헬로케어와 관련 제반 서비스를 의미합니다.\n
        \t i. 헬로케어 서비스\n
        \t ii. 기타 회사가 정하는 서비스\n
        2. "헬로케어 서비스"라 함은 헬로케어 모바일 접수/예약, 대기현황 등 "회사"가 "회원"에게 제공하는 서비스를 말합니다.\n
        3. "회원"이라 함은 이 약관에 동의하고, 이용계약(이하 "회원가입"이라 함)을 하여 따라 "회사"와 이용계약을 체결하고 "회사"가 제공하는 제반 서비스를 이용할 수 있는 자격을 부여 받은 자를 뜻합니다.\n
        4. “기타 회사가 정하는 서비스”라 함은 “회사”가 추가 개발하거나 다른 회사와의 제휴 계약 등을 통해 “회원”에게 제공하는 일체 서비스를 의미합니다.\n
        5. “아이디(ID)”라 함은 “회원”의 식별과 “똑닥 서비스” 이용을 위하여 “회원”이 정하고 “회사”가 승인하는 문자와 숫자의 조합을 이메일 또는 간편로그인 계정을 의미합니다.\n
        6. “비밀번호”라 함은 “회원”이 부여 받은 “아이디”와 일치되는 “회원”임을 확인하고 비밀보호를 위해 “회원”자신이 정한 문자 또는 숫자의 조합을 의미합니다.\n
        7. “단말기”라 함은 서비스에 접속하기 위해 회원이 이용하는 개인용 컴퓨터, PDA, 휴대전화, 태블릿PC 등의 전산장치를 말합니다.\n
        8. “해지”라 함은 회사 또는 회원이 이용계약을 해약하는 것을 말합니다.\n
        9. “게시물”이라 함은 “회원”이 “서비스”를 이용함에 있어 서비스 상에 게시한 부호ㆍ문자ㆍ음성ㆍ음향ㆍ화상ㆍ동영상 등의 정보 형태의 글, 사진, 동영상 및 각종 파일과 링크 등을 의미합니다.\n

        \n제 3 조 (약관의 게시와 개정)\n
        1. “회사”는 이 약관의 내용을 “회원”이 쉽게 알 수 있도록 서비스 내 페이지 화면에 게시합니다.\n
        2. “회사”는 “약관의 규제에 관한 법률”, “정보통신망 이용촉진 및 정보보호 등에 관한 법률(이하 “정보통신망법”)” 등 관련 법을 위배하지 않는 범위에서 이 약관을 개정할 수 있습니다.\n
        3. “회사”가 약관을 개정할 경우에는 적용일자 및 개정사유를 명시하여 현행약관과 함께 제 1 항 규정에 따라 그 개정약관의 적용일자 14일 전부터 적용일자 전일까지 공지합니다. 다만, 회원에게 중요한 약관을 개정하는 경우에는 개정약관의 적용일자 30일전부터 적용일자까지 공지합니다.\n
        4. 회사가 전항에 따라 개정약관을 공지 또는 통지하면서 회원에게 30일 기간 내에 의사표시를 하지 않으면 의사표시가 표명된 것으로 본다는 뜻을 명확하게 공지 또는 통지하였음에도 회원이 명시적으로 거부의 의사표시를 하지 아니한 경우 회원이 개정약관에 동의한 것으로 봅니다.\n
        5. 회원이 개정약관의 적용에 동의하지 않는 경우 회사는 개정 약관의 내용을 적용할 수 없으며, 이 경우 회원은 이용계약을 해지할 수 있습니다. 다만, 기존 약관을 적용할 수 없는 특별한 사정이 있는 경우에는 회사는 이용계약을 해지할 수 있습니다.\n

        \n제 4 조 (약관의 해석)\n
        “회사”는 필요한 경우, 개별 서비스에 대해서는 별도의 이용약관 및 정책(이하 “서비스 별 안내 등”라 합니다)을 둘 수 있으며, 해당 내용이 이 약관과 상충할 경우에는 “서비스 별 안내 등”이 우선하여 적용됩니다.\n

        \n제 5 조 (이용계약 체결)\n
        1. 이용계약은 “회원”이 되고자 하는 자가 약관의 내용에 대하여 동의를 한 다음 회원 가입신청을 하고 “회사”가 이러한 신청에 대하여 승낙함으로써 체결됩니다.\n
        2. “회사”는 다음 각 호에 해당하는 신청에 대해서는 승낙을 하지 않거나 사후에 이용 계약을 해지할 수 있습니다.\n
        /t i. 이 약관에 의하여 이전에 회원자격을 상실한 적이 있는 경우, 단 “회사”의 회원 재가입 승낙을 얻은 경우에는 예외로 함.\n
        /t ii. 실명이 아니거나 타인의 명의를 이용한 경우\n
        /t iii. 허위의 정보를 기재하거나, “회사”가 제시하는 내용을 기재하지 않은 경우\n
        /t iv. “회원”의 귀책사유로 인하여 승인이 불가능하거나 기타 규정한 제반 사항을 위반하며 신청하는 경우\n
        /t v. 만 14세 미만의 아동인 경우\n
        3. 제1항에 따른 신청에 있어 “회사”는 전문기관을 통한 “회원”의 실명확인 및 본인인증을 요청할 수 있습니다.\n
        4. “회사”는 서비스 관련 설비의 여유가 없거나, 기술상 또는 업무상 문제가 있는 경우에는 승낙을 유보할 수 있습니다.\n
        5. 제2항과 제4항에 따라 “회원”의 가입신청을 승낙을 하지 아니하거나 유보한 경우, “회사”는 원칙적으로 이를 “회원”에게 알리도록 합니다.\n
        6. 이용계약의 성립 시기는 “회사”가 가입완료를 신청절차 상에서 표시한 시점으로 합니다.\n
        7. “회사”는 “회원”에 대해 회사정책에 따라 등급별로 구분하여 이용시간, 이용횟수, 서비스 메뉴 등을 세분하여 이용에 차등을 둘 수 있습니다.\n

        \n 제 6 조 (서비스 제공 및 중지)\n
        1. “회원”은 “회사”가 제공하는 서비스에 대해 언제든지 사용 여부를 결정할 수 있으며, “회사”는 “회원”의 서비스 사용 의사가 없을 경우 서비스 제공을 중지합니다.\n
        2. “회사”는 다음 각호에 해당하는 경우 서비스의 제공을 중지할 수 있습니다.\n
        \t i. 설비의 보수 등을 위하여 부득이한 경우\n
        \t ii. 전기통신 사업법에 규정된 기간통신 사업자가 전기 통신서비스를 중지하는 경우\n
        \t iii. 천재지변 등으로 인해 서비스제공자가 불가피하게 서비스를 제공할 수 없는 사유가 발생한 경우\n
        \t iv. 회원이 이용해지를 요청한 경우\n
        \t v. 회원의 폐업/휴업 등을 포함하여, 회원의 사유로 인해 1개월 이상 서비스 이용이 중지된 경우
        \t vi. 만 14세 미만 아동의 회원인 경우 이 경우 “회사”는 제12조 “회원”에 대한 통지에 정한 방법으로 “회원”에게 통지합니다. 다만, “회사”가 사전에 통지할 수 없는 부득이한 사유가 있는 경우 사후에 통지할 수 있습니다.\n

        \n 제 7 조 (“서비스”의 변경)\n
        1. “회사”는 상당한 이유가 있는 경우에 운영상, 기술상의 필요에 따라 제공하고 있는 전부 또는 일부 “서비스”를 본 계약에서 정한 범위 내에서 변경할 수 있습니다.\n
        2. “서비스”의 내용, 이용방법, 이용시간에 대하여 변경이 있는 경우에는 변경사유, 변경될 서비스의 내용 및 제공일자 등은 그 변경 전에 해당 서비스 초기화면에 게시하여야 합니다.\n

        \n 제 8 조 (회원탈퇴 및 자격상실 등)\n
        1. “회원”은 언제든지 고객센터를 통하여 이용계약 탈퇴 및 신청을 할 수 있으며, “회사”는 관련법 등이 정하는 바에 따라 이를 즉시 처리하여야 합니다\n
        2. 회원이 다음 각 호의 사유에 해당하는 경우, “회사”는 회원자격을 제한 및 정지시킬 수 있습니다.\n
        \t i. 회원이 제15조 제1항 각 호의 행위를 한 경우\n
        \t ii. 다른 회원의 “서비스” 이용을 방해하거나 그 정보를 도용하는 등 전자상거래 질서를 위협하는 경우\n
        \t iii. “회사”를 이용하여 법령 또는 이 약관이 금지하거나 공서양속에 반하는 행위를 하는 경우\n
        3. 회사가 회원 자격을 제한∙정지 시킨 후, 동일한 행위가 2회 이상 반복되거나 30일 이내에 그 사유가 시정되지 아니하는 경우 회사는 회원자격을 상실시킬 수 있습니다.\n
        4. 회사가 회원자격을 상실시키는 경우에는 회원등록을 말소합니다. 이 경우 회원에게 이를 통지하고, 회원등록 말소 전에 최소한 30일 이상의 기간을 정하여 소명할 기회를 부여합니다. 만약 회원이 통지를 받은 날로부터 30일 내에 소명하고, 그 내용이 정당하다고 회사가 판단하는 경우 회사는 회원 자격을 원복해 줍니다.\n

    </string>
    <string name="agree_two_text">
        개인정보처리방침\n
        헬로케어 (“회사”라 함)는 정보통신망 이용촉진 및 정보보호 등에 관한 법률, 개인정보보호법, 통신비밀보호법, 전기통신사업법, 등 정보통신서비스제공자가 준수하여야 할 관련 법령상의 개인정보보호 규정을 준수하며, 관련 법령에 의거한 개인정보처리방침을 정하여 이용자 권익 보호에 최선을 다하고 있습니다.\n

        \n 개인정보 수집 항목 및 이용목적\n
        “회사”는 회원가입, 원활한 고객상담, 각종 서비스의 제공을 위해 아래와 같은 최소한의 개인정보를 필수항목으로 수집하고 있습니다.\n\n
        “회사”는 처리하고 있는 개인정보는 다음의 목적 이외의 용도로는 이용되지 않으며, 이용 목적이 변경되는 경우에는 개인정보 보호법 제18조에 따라 별도의 동의를 받는 등 필요한 조치를 이행할 예정입니다.\n\n
        1. “회사”는 서비스 제공을 위하여 수집한 모든 개인정보와 생성 정보를 아래의 목적으로 이용합니다.
        * 회원식별 및 가입의사 확인, 회원관리\n
        * 민원처리 및 고객 상담\n
        * 서비스 이용 과정 중 본인식별, 인증, 실명확인 및 각종 안내/고지\n
        * 불법, 부정이용 방지 및 비인가 사용방침\n
        * 결제서비스(거래승인)\n
        * 서비스 방문 및 이용기록 및 통계\n
        * 다양한 서비스 및 신규 서비스 제공\n
        * 알림 서비스\n
        2. ”회사”는 귀하의 개인정보보호를 매우 중요시하며, 『개인정보 보호법』과 『정보통신망 이용촉진 및 정보보호 등에 관한법률』상의 개인정보 처리방침 및 행정안전부와 정보통신부가 제정한 『개인정보 보호지침』을 준수하고 있습니다. 회사는 개인정보처리방침을 통하여 귀하께서 제공하시는 개인정보가 어떠한 용도와 방식으로 이용되고 있으며, 개인정보보호를 위해 어떠한 조치가 취해지고 있는지 알려드립니다.\n
        3. “회사”는 개인정보 처리방침을 사이트 첫 화면과 고객센터의 ‘개인정보 처리방침’ 항목에서 공개함으로써 회원들이 언제나 용이하게 보실 수 있도록 조치하고 있습니다.\n
        4. “회사”는 개인정보 처리방침의 지속적인 개선을 위하여 개인정보 처리방침을 개정하는데 필요한 절차를 정하고 있습니다. 그리고 개인정보 처리방침을 개정하는 경우 버전번호 등을 부여하여 개정된 사항을 귀하께서 쉽게 알아볼 수 있도록 하고 있습니다.\n
        5. “회사”는 귀하의 결제 서비스 이용을 처리하기 위하여 회원의 해당 결제수단 발행자에게(예: 등록한 카드의 카드사) 결제정보, 개인정보 등이 전송되며, 회사는 본 업무처리를 위하여 개인의 카드정보와 관련된 항목을 별도 보관하지 않습니다.\n
        6. 부가 서비스 및 맞춤식 서비스 이용 또는 이벤트 응모 과정에서 위와 같은 정보들이 수집될 수 있습니다.\n
        7. 기타 “회사”가 제공하는 정보 전달, 맞춤 서비스 제공, 통계학적 특성에 따른 서비스 제공에 활용되고 있습니다.\n

        \n개인정보 수집 및 이용에 대한 동의\n
        회사는 회원들이 회사의 개인정보 보호정책 또는 이용약관의 내용에 대하여 「동의 」버튼을 클릭할 수 있는 절차를 마련하여, 「동의」 버튼을 클릭하면 개인정보 수집 및 이용에 대해 동의한 것으로 봅니다.\n
    </string>
    <string name="agree_three_text">
        \n개인정보의 제3자에 대한 제공\n
        1. “회사”는 회원들의 개인정보를 “개인정보의 수집 및 이용목적”에서 고지한 범위 내에서 사용하며, 회원의 사전 동의 없이는 동 범위를 초과하여 이용하거나 원칙적으로 회원의 개인정보를 외부에 공개하지 않습니다. 다만 다음의 경우에는 회원의 개인정보를 제3자에게 제공(공유를 포함)할 수 있습니다.\n
        2. 다음의 경우 - 회원이 개인정보의 수집 및 이용에 대한 동의와 별도로 제3자 제공에 사전 동의한 경우\n
        : 회사는 회원에게 개인정보를 제공받는 자의 성명과 연락처, 제공받는 자의 개인정보 이용 목적, 제공하는 개인정보의 항목, 제공받는 자의 개인정보 보유 및 이용 기간, 동의 거부권이 존재한다는 사실 및 동의 거부에 따른 불이익의 내용을 미리 알립니다.\n
        * 법률규정이 있거나 법령상 의무준수를 위해 불가피한 경우\n
        * 수사기관이 수사목적을 위해 관계법령이 정한 절차를 거쳐 요구하는 경우\n
        * 통계작성 및 학술연구 등의 목적을 위해 필요한 경우로서 특정 개인을 알아볼 수 없는 형태로 개인정보를 제공하는 경우\n

        \n개인정보 처리의 위탁\n
        1. 회사는 서비스 향상을 위해서 회원의 개인정보를 외부 전문업체에 위탁하여 처리할 수 있습니다. 개인정보의 처리를 위탁하는 경우에는 미리 그 사실을 회원에게 공지하여 회원의 동의를 받을 것입니다.\n
        2. 회원의 개인정보의 위탁 처리하는 경우에는 위탁계약(위탁업무 수행 목적 외 개인정보 처리 금지, 개인정보의 기술적 관리적 보호조치, 위탁업무의 목적 및 범위, 재위탁 제한, 개인정보에 대한 접근 제한 등 안정성 확보 조치, 위탁업무와 관련하여 보유하고 있는 개인정보의 관리 현황 점검 등 감독, 수탁자가 준수하여야 할 의무를 위반한 경우의 손해배상 등이 내용이 포함됨)을 통하여 서비스제공자의 개인정보보호 관련 지시엄수, 개인정보에 관한 비밀유지, 제3자 제공의 금지 및 사고시의 책임부담 등을 명확히 규정하고 당해 계약내용을 서면 또는 전자적으로 보관할 것입니다.\n
        3. 이 경우에 회사는 위탁업무의 내용, 개인정보 처리업무를 위탁 받아 처리하는 자(수탁자)를 회원이 언제든지 쉽게 확인할 수 있도록 회사의 ‘서비스’에 지속적으로 게재하여 공개합니다.\n
        4. 회사는 업무 위탁으로 인하여 회원의 개인정보가 분실, 도난, 유출, 변조, 훼손되지 아니하도록 수탁자를 교육하고 수탁자가 개인정보를 안전하게 처리하는 지를 감독할 것입니다.\n
    </string>
    <string name="healthboard">건강 정보통</string>
    <string name="health_info1">원인 모를 발목 통증? "부주상골 증후군" 통증, 수술, 치료법</string>
    <string name="health_info2">빈대 물리면 증상이 어떻게 되나요?</string>
    <string name="health_info3">모공각화증, 각질이 쌓이는 원인을 없애야...</string>
    <string name="health_info4">혼자만의 세계에 갇힌 아이, "자페증" 증상과 치료법</string>
    <string name="health_info5">생리 중 성관계하면 임신 안된다? NO</string>
    <string name="health_info6">긁히면 피부 부풀어 오르는 "피부 묘기증", 냉찜질로 가라앉혀야</string>
    <string name="health_info7">"눈꺼풀 여드름"안검염, 만성 안구 건조증으로?</string>
    <string name="health_info8">뒤로 젖힐 때 허리 아프다면? "척추분리증" 의심해야</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_navi_activity.kt">NaviActivity.kt</string>
    <string name="title_activity_navi">NaviActivity</string>
</resources>