<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signin_doc"
    android:layout_width="412dp"
    android:layout_height="732dp"
    android:clipToOutline="true"
    android:background="#FFFFFF">

    <Button
        android:id="@+id/sign_docbtn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:backgroundTint="@color/blue"
        android:text="@string/signin"
        android:textAlignment="center"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/signdoc_title"
        android:layout_width="100dp"
        android:layout_height="26dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="164dp"
        android:layout_marginTop="38dp"
        android:gravity="center"
        android:text="정보 입력"
        android:textSize="20sp"
        android:textStyle="bold" />
    <RelativeLayout
        android:id="@+id/signdoc_license"
        android:layout_width="366dp"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="24dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="98dp">

        <TextView
            android:id="@+id/txt_license"
            android:layout_width="59dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="3dp"
            android:gravity="top"
            android:text="@string/license" />
        <EditText
            android:id="@+id/license_editline"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:ems="10"
            android:inputType="text"
            android:text="@string/license_ex"
            android:textSize="10dp"
            android:textColor="@color/grey"
            android:layout_alignParentBottom="true"/>

        <Button
            android:id="@+id/license_plusbtn"
            android:layout_width="56dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:backgroundTint="@color/white"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="+"
            android:textColor="@color/black"
            app:iconPadding="0dp" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/sign_hospital"
        android:layout_width="366dp"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="24dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="174dp">
        <TextView
            android:id="@+id/txt_hospital"
            android:layout_width="57.67dp"
            android:layout_height="17.86dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="3dp"
            android:gravity="top"
            android:text="@string/hospital"/>
        <EditText
            android:id="@+id/hospital_editline"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:ems="10"
            android:inputType="text"
            android:text="@string/hosptial_ex"
            android:textSize="10dp"
            android:textColor="@color/grey"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/doc_address"
        android:layout_width="366dp"
        android:layout_height="90dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="24dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="250dp">
        <TextView
            android:id="@+id/txt_doc_add"
            android:layout_width="57.67dp"
            android:layout_height="17.86dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="3dp"
            android:gravity="top"
            android:text="@string/address"/>
        <EditText
            android:id="@+id/location_editline"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginTop="19dp"
            android:ems="10"
            android:inputType="text"
            android:text="@string/location"
            android:textSize="10dp"
            android:textColor="@color/grey"/>
        <Button
            android:id="@+id/location_serachbtn"
            android:layout_width="66dp"
            android:layout_height="40dp"
            android:layout_marginTop="19dp"
            android:layout_alignParentRight="true"
            android:text="찾기"
            android:textSize="10dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:padding="5sp"
            android:backgroundTint="#BAB6B6"/>
        <EditText
            android:id="@+id/address_editline"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:ems="10"
            android:inputType="text"
            android:text="@string/add_detail"
            android:textSize="10dp"
            android:textColor="@color/grey"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/doctor_info"
        android:layout_width="366dp"
        android:layout_height="90dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="24dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="363dp">

        <Button
            android:id="@+id/doc_plusbtn2"
            android:layout_width="56dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:backgroundTint="@color/white"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="+"
            android:textColor="@color/black"
            app:iconPadding="0dp" />

        <TextView
            android:id="@+id/txt_doctor"
            android:layout_width="57.67dp"
            android:layout_height="17.86dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="3dp"
            android:gravity="top"
            android:text="@string/doctor_info"/>
        <EditText
            android:id="@+id/docname_editline"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginTop="19dp"
            android:ems="10"
            android:inputType="text"
            android:text="@string/name"
            android:textSize="10dp"
            android:textColor="@color/grey" />
        <EditText
            android:id="@+id/doc_acad_editline"
            android:layout_width="266dp"
            android:layout_height="40dp"
            android:layout_marginTop="19dp"
            android:layout_alignParentRight="true"
            android:text="@string/academic_record"
            android:textSize="10dp"
            android:textColor="@color/grey"/>
        <EditText
            android:id="@+id/doc_greet_editline"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:ems="10"
            android:inputType="text"
            android:text="@string/greeting"
            android:textSize="10dp"
            android:textColor="@color/grey"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/doc_major"
        android:layout_width="366dp"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="24dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="478dp">
        <TextView
            android:id="@+id/txt_docmajor"
            android:layout_width="57.67dp"
            android:layout_height="17.86dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="3dp"
            android:gravity="top"
            android:text="@string/doc_major"/>
        <EditText
            android:id="@+id/docmajor_editline"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:ems="10"
            android:inputType="text"
            android:text="진료과목을 작성해주세요"
            android:textSize="10dp"
            android:textColor="@color/grey"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/doc_time"
        android:layout_width="366dp"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="24dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="551dp">
        <TextView
            android:id="@+id/txt_doctime"
            android:layout_width="57.67dp"
            android:layout_height="17.86dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="3dp"
            android:gravity="top"
            android:text="@string/doc_time"/>
        <EditText
            android:id="@+id/doctime_editline"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:ems="10"
            android:inputType="text"
            android:text="@string/doc_time_detail"
            android:textSize="10dp"
            android:textColor="@color/grey"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>
</RelativeLayout>