<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signin_phar"
    android:layout_width="412dp"
    android:layout_height="732dp"
    android:background="#FFFFFF">

    <android.widget.Button
        android:id="@+id/phar_signbtn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/rectangle_style"
        android:backgroundTint="@color/blue"
        android:text="@string/signin"
        android:textAlignment="center"
        android:textColor="@color/white" />

    <TextView
        android:layout_width="100dp"
        android:layout_height="26dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:layout_marginLeft="164dp"
        android:layout_marginTop="38dp"
        android:text="정보 입력"
        android:textSize="20sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/signphar_license"
        android:layout_width="366dp"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="24dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="98dp">

        <TextView
            android:id="@+id/txt_license"
            android:layout_width="59dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="3dp"
            android:gravity="top"
            android:text="@string/license" />
        <EditText
            android:id="@+id/phar_license_editline"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:ems="10"
            android:inputType="text"
            android:text="@string/license_ex"
            android:textSize="10dp"
            android:textColor="@color/grey"
            android:layout_alignParentBottom="true"/>

        <Button
            android:id="@+id/phar_plusbtn1"
            android:layout_width="56dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:backgroundTint="@color/white"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="+"
            android:textColor="@color/black"
            app:iconPadding="0dp" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/phar_name"
        android:layout_width="366dp"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="24dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="174dp">
        <TextView
            android:id="@+id/txt_pharname"
            android:layout_width="57.67dp"
            android:layout_height="17.86dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="3dp"
            android:gravity="top"
            android:text="@string/pharmacy"/>
        <EditText
            android:id="@+id/pharname_editline"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:ems="10"
            android:inputType="text"
            android:text="@string/phar_ex"
            android:textSize="10dp"
            android:textColor="@color/grey"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/phar_address"
        android:layout_width="366dp"
        android:layout_height="90dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="24dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="250dp">
        <TextView
            android:id="@+id/txt_phar_loc"
            android:layout_width="57.67dp"
            android:layout_height="17.86dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="3dp"
            android:gravity="top"
            android:text="@string/address"/>
        <EditText
            android:id="@+id/pharloc_editline"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginTop="19dp"
            android:ems="10"
            android:inputType="text"
            android:text="@string/location"
            android:textSize="10dp"
            android:textColor="@color/grey"/>
        <android.widget.Button
            android:id="@+id/pharloc_btn"
            android:layout_width="66dp"
            android:layout_height="40dp"
            android:layout_marginTop="19dp"
            android:layout_alignParentRight="true"
            android:text="찾기"
            android:textSize="10dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:padding="5sp"
            android:backgroundTint="@color/lightgrey"/>
        <EditText
            android:id="@+id/pharloc_editline2"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:ems="10"
            android:inputType="text"
            android:text="@string/add_detail"
            android:textSize="10dp"
            android:textColor="@color/grey"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/phar_hospital"
        android:layout_width="366dp"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="24dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="363dp">
        <TextView
            android:layout_width="57.67dp"
            android:layout_height="17.86dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="3dp"
            android:gravity="top"
            android:text="연계 병원" />
        <EditText
            android:id="@+id/pharhospital_editline"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:text="병원명 찾기"
            android:textSize="10dp"
            android:textColor="@color/grey"
            android:layout_alignParentBottom="true"/>
        <android.widget.Button
            android:id="@+id/pharhospital_btn"
            android:layout_width="66dp"
            android:layout_height="40dp"
            android:text="찾기"
            android:textSize="10dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:padding="5sp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:backgroundTint="@color/lightgrey"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/chemist_info"
        android:layout_width="366dp"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="24dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="450dp">
        <TextView
            android:layout_width="57.67dp"
            android:layout_height="17.86dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="3dp"
            android:gravity="top"
            android:text="@string/phar_info" />
        <EditText
            android:id="@+id/che_name_editline"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:text="@string/name"
            android:textSize="10dp"
            android:textColor="@color/grey"
            android:layout_alignParentBottom="true"/>
        <EditText
            android:id="@+id/che_greet_editline"
            android:layout_width="266dp"
            android:layout_height="40dp"
            android:text="@string/greeting"
            android:textSize="10dp"
            android:textColor="@color/grey"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/phar_time"
        android:layout_width="366dp"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="24dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="530dp">
        <TextView
            android:id="@+id/txt_phartime"
            android:layout_width="57.67dp"
            android:layout_height="17.86dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="3dp"
            android:gravity="top"
            android:text="@string/phar_time"/>
        <EditText
            android:id="@+id/phartime_editline"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:ems="10"
            android:inputType="text"
            android:text="@string/phar_time_detail"
            android:textSize="10dp"
            android:textColor="@color/grey"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>
</RelativeLayout>